Adding Kandam as a nation

--- a/localisation/BL_civil_war_l_english.yml
+++ b/localisation/BL_civil_war_l_english.yml
@@ -2,70 +2,75 @@
  blm.1.t:0 "The Second Anglo-Saxon Reforms"
  blm.1.d:0 "Though harsh, the introduction of these linguistic and cultural reforms will preserve the quintessential English character of British Lemuria. Sadly, not all of our people will agree with this action, however necessary."
  blm.1.1:0 "Proceed"
- blm.2.t:0 "Continue the Reforms"
- blm.2.d:0 "We must not back down now. Any concessions to the non-English immigrants will be ultimately damaging to our great nation."
- blm.2.1:0 "The right path"
- blm.3.t:0 "Quell Major Riots"
- blm.3.d:0 "Without a doubt the reforms have been hard on the minority populations, but we're doing this to help them become more civilized."
- blm.3.1:0 "They shall bow!"
- blm.4.t:0 "Arcadia Rebels!"
- blm.4.d:0 "The Arcadians, ethnically Italians for the most part, have declared themselves a 'free' people. They're really just anarchists and fascists in disguise fighting against the rightful government. Clearly, the instability of the past months is going to spread unless we do something drastic."
- blm.4.a:0 "Declare a Military Government"
- blm.4.b:0 "Allow them some independence"
- blm.4.c:0 "Grant them full independence"
- blm.5.t:0 "Annexation of Suisse Colony"
- blm.5.d:0 "Suisse has long been administered by a small group of bureaucrats who have enjoyed far too much freedom. Almost 30 years ago the Home Islands placed them under our watchcare but until now we've been content to allow them their freedom. No more."
- blm.5.a:0 "Begin integrating their bureaucracy"
- blm.6.t:0 "The Werreurbro Rebellion"
- blm.6.d:0 "The French and Bretons living in the far west of British Lemuria have presented a set of ridiculous demands. They claim that the British majority of the nation has been oppressing them and that they will either have independence or war."
- blm.6.a:0 "Prepare the attack"
- blm.6.b:0 "Grant them some independence"
- blm.6.c:0 "They're independent now"
- blm.7.t:0 "Audenshyre Declares Independence"
- blm.7.d:0 "Long a home of dreamers, artists, and a sizeable contingent of pacifists, Audenshyre has risen up against the central government. They declare that they do not want war, but they are unwilling to take part in the necessary suppression of the rebelling areas."
- blm.7.a:0 "Don't attack them, yet"
- blm.7.b:0 "They'll pay for this"
+ blm.2.t:0 "The Second Anglo-Saxon Reforms"
+ blm.2.d:0 "Though harsh, the introduction of these linguistic and cultural reforms will preserve the quintessential English character of British Lemuria. Sadly, not all of our people will agree with this action, however necessary."
+ blm.2.1:0 "Proceed"
+ blm.3.t:0 "Continue the Reforms"
+ blm.3.d:0 "We must not back down now. Any concessions to the non-English immigrants will be ultimately damaging to our great nation."
+ blm.3.1:0 "The right path"
+ blm.4.t:0 "Quell Major Riots"
+ blm.4.d:0 "Without a doubt the reforms have been hard on the minority populations, but we're doing this to help them become more civilized."
+ blm.4.1:0 "They shall bow!"
+ blm.5.t:0 "Arcadia Rebels!"
+ blm.5.d:0 "The Arcadians, ethnically Italians for the most part, have declared themselves a 'free' people. They're really just anarchists and fascists in disguise fighting against the rightful government. Clearly, the instability of the past months is going to spread unless we do something drastic."
+ blm.5.a:0 "Declare a Military Government"
+ blm.5.b:0 "Allow them some independence"
+ blm.5.c:0 "Grant them full independence"
+ blm.6.t:0 "Annexation of Suisse Colony"
+ blm.6.d:0 "Suisse has long been administered by a small group of bureaucrats who have enjoyed far too much freedom. Almost 30 years ago the Home Islands placed them under our watchcare but until now we've been content to allow them their freedom. No more."
+ blm.6.a:0 "Begin integrating their bureaucracy"
+ blm.7.t:0 "The Werreurbro Rebellion"
+ blm.7.d:0 "The French and Bretons living in the far west of British Lemuria have presented a set of ridiculous demands. They claim that the British majority of the nation has been oppressing them and that they will either have independence or war."
+ blm.7.a:0 "Prepare the attack"
+ blm.7.b:0 "Grant them some independence"
  blm.7.c:0 "They're independent now"
- blm.8.t:0 "The Qlach Avengers"
- blm.8.d:0 "The Qlach, those insane natives who live in the depths of the Ackerson Desert, have united behind the banner of a well know terrorist group, the Qlach Avengers. They claim that their land has been systematically stolen from them and that they are the rightful heirs of Lemuria. Despite the utter ridiculousness of their claims they have gathered and armed an unfortunately impressive number of men."
- blm.8.a:0 "Suppress the natives"
- blm.8.b:0 "Grant native independence (Puppet)"
- blm.8.c:0 "Allow them their independence"
- blm.9.t:0 "Northern Ackerson Desert Seized!"
- blm.9.d:0 "The Kalari have finally gone too far. They have seized upon the opportunity presented by the groups in our nation rebelling to annex the northern portions of the Ackerson Desert. It doesn't matter that there are a number of cities that still view themselves as Kalari, they have been under the British Lemurian flag for over 50 years. That land belongs to British Lemuria!"
- blm.9.a:0 "Damn them!"
- blm.9.b:0 "Damn them!"
- blm.10.t:0 "The Workers Union of Lemuria"
- blm.10.d:0 "We always knew that the spectre of Communism was a danger to all civilized nations, but now that spectre has possessed a large section of the western part of the nation. "
- blm.10.a:0 "We shall eliminate them"
- blm.10.b:0 "Acknowledge the Workers Union"
- blm.11.t:0 "The Rise of the Anarchists"
- blm.11.d:0 "Sometimes it is hard to be right all the time. The Communists are now struggling against their own rebels, a ragtag group of idiots calling themselves anarchists. How they could possibly claim to represent the will of the people is simply unfathomable. They wish to destroy all governmental institutions and replace them with... well, anarchy."
- blm.11.a:0 "We'll fight them, too!"
- blm.11.b:0 "How is this our problem?"
- blm.12.t:0 "Approach Audenshyre About Reintegration"
- blm.12.d:0 "Audenshyre must surely see by now that a divided British Lemuria will only lead to chaos and suffering. If we can help them understand the importance of working with the central government, perhaps through some large concessions, we can present a more united front against the rebels."
- blm.12.1:0 "We're sure this is a good deal"
- blm.13.t:0 "Rise of the Republicans"
- blm.13.d:0 "We didn't think it was possible, but now a large portion of the population has risen up against our rightful rule claiming that it is a 'dictatorship' and 'tyrannical'. Are they mad!?! By fighting against us now they're dooming the nation to collapse!"
- blm.13.a:0 "They're rebels, no matter their goals!"
- blm.13.b:0 "We must end this war now"
- blm.14.t:0 "Declaration of the Free Cities"
- blm.14.d:0 "A number of cities across the western half of British Lemuria, under seige by rebel forces, have petitioned Great Britain for protection. True, this means that they will be de facto independent of us, but in order to protect their industrial capabilities, as well as their important role in trade across the continent we should add our voice to theirs and request British assistance."
- blm.14.a:0 "Britain will keep them safe"
- blm.15.t:0 "The End of the Civil War"
- blm.15.d:0 "With the defeat of the remaining rebels our bruised and tattered nation can finally begin healing. There will certainly be a reckoning for all of the pain and suffering caused on all sides of this conflict, but perhaps we can emerge from this as a stronger, more united nation."
- blm.15.a:0 "Finally, some peace!"
- blm.16.t:0 "Petition the Allies for Support"
- blm.16.d:0 "Our land was stolen by Indolemurians while we were busy preserving our nation. We understand that the world is busy with many conflicts, but perhaps we can petition the Allies for support in recovering our land."
- blm.16.a:0 "We must restore order!"
- blm.17.t:0 "Make Clear Demands for Northern Ackerson Desert"
- blm.17.d:0 "The time for diplomatic language is past. If we're to reclaim our land we must make our position abundantly clear. The Kalari, or whatever they're calling themselves now, *must* return our land."
- blm.17.a:0 "Our claim will hold for now (back down)"
- blm.17.b:0 "We shall fight for our land!"
- blm.20.t:0 "A Diminished Dominion"
- blm.20.d:0 "Perhaps it was inevitable. British Lemuria was an attempt to weld together too many peoples and too much territory. We must relinquish our claims for the good of our people, for the sake of world peace."
- blm.20.a:0 "British Lemuria is better now, despite our losses"
+ blm.8.t:0 "Audenshyre Declares Independence"
+ blm.8.d:0 "Long a home of dreamers, artists, and a sizeable contingent of pacifists, Audenshyre has risen up against the central government. They declare that they do not want war, but they are unwilling to take part in the necessary suppression of the rebelling areas."
+ blm.8.a:0 "Don't attack them, yet"
+ blm.8.b:0 "They'll pay for this"
+ blm.8.c:0 "They're independent now"
+ blm.9.t:0 "The Qlach Avengers"
+ blm.9.d:0 "The Qlach, those insane natives who live in the depths of the Ackerson Desert, have united behind the banner of a well know terrorist group, the Qlach Avengers. They claim that their land has been systematically stolen from them and that they are the rightful heirs of Lemuria. Despite the utter ridiculousness of their claims they have gathered and armed an unfortunately impressive number of men."
+ blm.9.a:0 "Suppress the natives"
+ blm.9.b:0 "Grant native independence (Puppet)"
+ blm.9.c:0 "Allow them their independence"
+ blm.10.t:0 "Northern Ackerson Desert Seized!"
+ blm.10.d:0 "The Kalari have finally gone too far. They have seized upon the opportunity presented by the groups in our nation rebelling to annex the northern portions of the Ackerson Desert. It doesn't matter that there are a number of cities that still view themselves as Kalari, they have been under the British Lemurian flag for over 50 years. That land belongs to British Lemuria!"
+ blm.10.a:0 "Damn them!"
+ blm.10.b:0 "Damn them!"
+ blm.11.t:0 "The Workers Union of Lemuria"
+ blm.11.d:0 "We always knew that the spectre of Communism was a danger to all civilized nations, but now that spectre has possessed a large section of the western part of the nation. "
+ blm.11.a:0 "We shall eliminate them"
+ blm.11.b:0 "Acknowledge the Workers Union"
+ blm.12.t:0 "The Rise of the Anarchists"
+ blm.12.d:0 "Sometimes it is hard to be right all the time. The Communists are now struggling against their own rebels, a ragtag group of idiots calling themselves anarchists. How they could possibly claim to represent the will of the people is simply unfathomable. They wish to destroy all governmental institutions and replace them with... well, anarchy."
+ blm.12.a:0 "We'll fight them, too!"
+ blm.12.b:0 "How is this our problem?"
+ blm.13.t:0 "Approach Audenshyre About Reintegration"
+ blm.13.d:0 "Audenshyre must surely see by now that a divided British Lemuria will only lead to chaos and suffering. If we can help them understand the importance of working with the central government, perhaps through some large concessions, we can present a more united front against the rebels."
+ blm.13.1:0 "We're sure this is a good deal"
+ blm.14.t:0 "Rise of the Republicans"
+ blm.14.d:0 "We didn't think it was possible, but now a large portion of the population has risen up against our rightful rule claiming that it is a 'dictatorship' and 'tyrannical'. Are they mad!?! By fighting against us now they're dooming the nation to collapse!"
+ blm.14.a:0 "They're rebels, no matter their goals!"
+ blm.14.b:0 "We must end this war now"
+ blm.15.t:0 "Declaration of the Free Cities"
+ blm.15.d:0 "A number of cities across the western half of British Lemuria, under seige by rebel forces, have petitioned Great Britain for protection. True, this means that they will be de facto independent of us, but in order to protect their industrial capabilities, as well as their important role in trade across the continent we should add our voice to theirs and request British assistance."
+ blm.15.a:0 "Britain will keep them safe"
+ blm.16.t:0 "The End of the Civil War"
+ blm.16.d:0 "With the defeat of the remaining rebels our bruised and tattered nation can finally begin healing. There will certainly be a reckoning for all of the pain and suffering caused on all sides of this conflict, but perhaps we can emerge from this as a stronger, more united nation."
+ blm.16.a:0 "Finally, some peace!"
+ blm.17.t:0 "Petition the Allies for Support"
+ blm.17.d:0 "Our land was stolen by Indolemurians while we were busy preserving our nation. We understand that the world is busy with many conflicts, but perhaps we can petition the Allies for support in recovering our land."
+ blm.17.a:0 "We must restore order!"
+ blm.18.t:0 "Make Clear Demands for Northern Ackerson Desert"
+ blm.18.d:0 "The time for diplomatic language is past. If we're to reclaim our land we must make our position abundantly clear. The Kalari, or whatever they're calling themselves now, *must* return our land."
+ blm.18.a:0 "Our claim will hold for now (back down)"
+ blm.18.b:0 "We shall fight for our land!"
+ blm.19.t:0 "A Diminished Dominion"
+ blm.19.d:0 "Perhaps it was inevitable. British Lemuria was an attempt to weld together too many peoples and too much territory. We must relinquish our claims for the good of our people, for the sake of world peace."
+ blm.19.a:0 "British Lemuria is better now, despite our losses"
+ 
+ 
  blm.25.t:0 "The Defeat of Arcadia"
  blm.25.d:0 "The rebels in Arcadia have been crushed. It has been a difficult and costly conflict with the insurrectionists, but we have reestablished control."
  blm.25.a:0 "The rebels are crushed!"
