--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -2001,3 +2001,24 @@
  NIL_neutrality_ADJ:0 "Nilotian"
  NIL_communism_ADJ:0 "Nilotian"
  NIL_monarchism_ADJ:0 "Nilotian"
+ KKA_fascism:0 "Kandam Empire"
+ KKA_fascism_DEF:0 "the Kandam Empire"
+ KKA_democratic:0 "Republic of Kumarikkandam"
+ KKA_democratic_DEF:0 "the Republic of Kumarikkandam"
+ KKA_neutrality:0 "Kandam"
+ KKA_neutrality_DEF:0 "the Kandam"
+ KKA_monarchism:0 "Kingdom of Kumarikkandam"
+ KKA_monarchism_DEF:0 "the Kingdom of Kumarikkandam"
+ KKA_communism:0 "Peoples Republic of Kumarikkandam"
+ KKA_communism_DEF:0 "the Peoples Republic of Kumarikkandam"
+ KKA_islamist:0 "Kandam Islamic State"
+ KKA_islamist_DEF:0 "the Kandam Islamic State"
+ KKA_mandalist:0 "Kumarikkandam"
+ KKA_mandalist_DEF:0 "the Kumarikkandam"
+ KKA_fascism_ADJ:0 "Kandam"
+ KKA_democratic_ADJ:0 "Kandam"
+ KKA_neutrality_ADJ:0 "Kandam"
+ KKA_communism_ADJ:0 "Kandam"
+ KKA_monarchism_ADJ:0 "Kandam"
+ KKA_mandalist_ADJ:0 "Kandam"
+ KKA_islamist_ADJ:0 "Kandam"
