--- a/localisation/aml_state_names_l_english.yml
+++ b/localisation/aml_state_names_l_english.yml
@@ -314,7 +314,7 @@
  STATE_1141:0 "Peter I Island"
  STATE_1142:0 "Komandorskiye Ostrova"
  STATE_1143:0 "East Marie Byrd Land"
- STATE_1144:0 "Antarctic Peninsula"
+ STATE_1144:0 "Kenzarakseran"
  STATE_1145:0 "Princess Elizabeth Land"
  STATE_1146:0 "Wrangel Island"
  STATE_1147:0 "Chirikov Island"
