--- a/localisation/aml_parties_l_english.yml
+++ b/localisation/aml_parties_l_english.yml
@@ -129,3 +129,4 @@
  PRJ_mandalism_party:0 "No Representation"
  PRJ_islamism_party:0 "Yohannian Islamic Council"
  PRJ_monarchism_party:0 "Hierosolimitanus Dynasty"
+ ETH_monarchism_party:0 "Solomonic Dynasty"
