--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -206,8 +206,8 @@
  EST_monarchism:0 "Kingdom of Estonia"
  EST_monarchism_DEF:0 "the Kingdom of Estonia"
  EST_monarchism_ADJ:0 "Estonian"
- ETH_monarchism:0 "Kingdom of Ethiopia"
- ETH_monarchism_DEF:0 "the Kingdom of Ethiopia"
+ ETH_monarchism:0 "Ethiopian Empire"
+ ETH_monarchism_DEF:0 "the Ethiopian Empire"
  ETH_monarchism_ADJ:0 "Ethiopian"
  FER_monarchism:0 "Kingdom of Amuria"
  FER_monarchism_DEF:0 "the Kingdom of Amuria"
