--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -64,7 +64,7 @@
  FMU_kriegspfad_desc:1 "\"War between nations is inevitable. It is as necessary as breathing... for if a man stops breathing he dies. So too does the nation which does not embrace war.\" -H. B. Immermann"
  FMU_germanic_research_pact:1 "Germanic Research Pact"
  FMU_germanic_research_pact_desc:1 "Our research would benefit greatly from access to the brightest minds from the Fatherland."
- FMU_ocean_destiny:0 "The Ocean is our Destiny"
+ FMU_ocean_destiny:0 "Ocean is Our Destiny"
  FMU_ocean_destiny_desc:0 "By controlling the oceans around Mu and beyond we can control our future and aid the Fatherland."
  FMU_pitkairn_schiffwerke:0 "Pitkairn-Schiffwerke"
  FMU_pitkairn_schiffwerke_desc:0 "Our navy must expand to meet the needs of the people! By growing our shipbuilding capacity we will increase our nation's safety."
@@ -76,7 +76,7 @@
  FMU_success_breeds_success_desc: "Domestic propaganda campaigns should help improve public opinion of our government and our armed forces. Our successful naval buildup is already well spoken of by our news organizations."
  FMU_walls_of_steel:0 "Walls of Steel"
  FMU_walls_of_steel_desc: "We shall never allow our enemies to set foot on the soil of our precious Heartland. Though it pains us we must prepare to repel invasions before it is too late."
- FMU_schimmelpferds_address:0 "Großadmiral Schimmelpferd's Address"
+ FMU_schimmelpferds_address:0 "Großadmiral's Address"
  FMU_schimmelpferds_address_desc:0 "\"I stand before this assembly as a man humiliated. Our mighty navy is unable to stem the oncoming tide of war. We must now turn our minds to the specter of defense. Despite our precarious position we can still defend the Herzland, our home.\" GrAdm Schimmelpferd to the Volksvertretung"
  FMU_austral_ocean:0 "Austral Ocean Dominance"
  FMU_austral_ocean_desc:0 "Our navy now far outnumbers that of the other industrialized nations in the Austral Ocean. We are unmatched in might!"
@@ -134,13 +134,13 @@
  FMU_blauwasser_stockmarket_desc:1 "If we are to succeed in the global market then we must control a sizeable portion of that market. We will establish a stock exchange in our former capital, Blauwasser, to bring monies both foreign and domestic under our purview."
  FMU_civil_works_research_admin:1 "Civil Works Research Administration"
  FMU_civil_works_research_admin_desc:1 "With the advances in technology that can be found across the globe we should create incentives at national institutions and universities to apply these to our economy."
- FMU_1938_domestic_tech_fair:1 "The 1938 Domestic Technology National Fair"
+ FMU_1938_domestic_tech_fair:1 "Technology National Fair 1938"
  FMU_1938_domestic_tech_fair_desc:1 "If companies compete, especially in the public eye, they can be driven to produce results faster and cheaper. A national fair would put their efforts on display for the public."
- FMU_1940_domestic_tech_fair:1 "The 1940 Domestic Technology National Fair"
+ FMU_1940_domestic_tech_fair:1 "Technology National Fair 1940"
  FMU_1940_domestic_tech_fair_desc:1 "Our last biennial fair was a resounding success. By continuing this tradition we can ensure our technological dominance in all spheres."
- FMU_1942_domestic_tech_fair:1 "The 1942 Domestic Technology National Fair"
+ FMU_1942_domestic_tech_fair:1 "Technology National Fair 1942"
  FMU_1942_domestic_tech_fair_desc:1 "By now our people are expecting new wonders every other year from our companies. We should not disappoint them."
- FMU_1944_domestic_tech_fair:1 "The 1944 Domestic Technology National Fair"
+ FMU_1944_domestic_tech_fair:1 "Technology National Fair 1944"
  FMU_1944_domestic_tech_fair_desc:1 "Our technology fair has become so successful that companies now have to compete for space to present their ideas to the public. Perhaps we could provide them with a more permanent venue for research and development, while still benefitting our glorious nation."
  FMU_kings_university:1 "Kaiser's University"
  FMU_kings_university_desc:1 "Our Kaiser has graciously created an endowment of land and capital which will provide the finest education on the continent and eventually the finest in the world. By partnering with private companies we can further accelerate the university's growth and impact."
@@ -148,7 +148,7 @@
  FMU_national_university_desc:1 "Nowhere is there a people as industrious and inventive as the Blaudeutsch. We must provide a university, and eventually a whole network of universities, to keep our technological edge in this world. By partnering with private companies we can further accelerate the university's growth and impact."
  FMU_peoples_university:1 "The Peoples University"
  FMU_peoples_university_desc:1 "The workers must have not only basic education, but there should be a strong research arm to our nation. The brilliance of our People should be given a place to shine!"
- FMU_national_research_dev:1 "National Research and Development Foundation"
+ FMU_national_research_dev:1 "National R&D Foundation"
  FMU_national_research_dev_desc:1 "To ensure our technological supremacy we will reorganize the Civil Works Research Administration into a new department, responsible for multiple research and development tasks, and well integrated with our university research labs."
  FMU_einsteins_theorem:1 "Einstein's Theorem"
  FMU_einsteins_theorem_desc:1 "The German ex-pat Albert Einstein published some very interesting papers in 1905. Some of our scientists would like permission to delve further into the mysteries of atoms and the powers contained therein."
