--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -29,7 +29,7 @@
  VICTORY_POINTS_16390:0 "Tungul"
  VICTORY_POINTS_16384:0 "Ptolmey"
  VICTORY_POINTS_5060:0 "Vrokima"
- VICTORY_POINTS_2972:0 "Aqyar
+ VICTORY_POINTS_2972:0 "Aqyar"
  VICTORY_POINTS_2900:0 "Fryannovsk"
  VICTORY_POINTS_4859:0 "Kutur-Ogly"
  VICTORY_POINTS_2923:0 "Chernogorsk"
