--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -778,8 +778,8 @@
  SOK_monarchism_ADJ:0 "Södrakorsan"
  SCP_fascism:0 "Scotia"
  SCP_fascism_DEF:0 "Scotia"
- SCP_democratic:0 "Republic of Scotia"
- SCP_democratic_DEF:0 "Republic of Scotia"
+ SCP_democratic:0 "Dominion of Scotia"
+ SCP_democratic_DEF:0 "Dominion of Scotia"
  SCP_neutrality:0 "Scotia"
  SCP_neutrality_DEF:0 "Scotia"
  SCP_monarchism:0 "Scotian Kingdom"
