--- a/localisation/aml_state_names_l_english.yml
+++ b/localisation/aml_state_names_l_english.yml
@@ -338,4 +338,6 @@
  STATE_1165:0 "St Matthew Island"
  STATE_1166:0 "Panchaia Isles"
  STATE_1167:0 "Ilhas Douradas"
- 
+ STATE_1168:0 "Lisboa"
+ STATE_1169:0 "Mayda"
+ STATE_1170:0 "Rodrigo"
