--- a/localisation/aml_game_rules_l_english.yml
+++ b/localisation/aml_game_rules_l_english.yml
@@ -2,3 +2,40 @@
  WEST_FRAGMENTATION_STATUS:0 "West Coast Fragmentation Status"
  RULE_OPTION_WEST_FRAGMENTED:0 "West Coast Fragmented"
  RULE_OPTION_WEST_FRAGMENTED_DESC:0 "All releasable nations in the North American West Coast region are released as free and independent nations upon game-start."
+
+
+
+ ATL_AI_BEHAVIOR:0 "@ATL Atlantis"
+ MUU_AI_BEHAVIOR:0 "@MUU Federal Republic of Mu"
+ FMU_AI_BEHAVIOR:0 "@FMU Freistaat von Mu"
+ PRJ_AI_BEHAVIOR:0 "@PRJ Kingdom of Yohannia"
+
+
+ #Atlantis Rules
+ RULE_OPTION_COMMUNIST_ATL_AI_DESC:0 "Atlantis will try to reform itself into a communist state and ally itself with the Soviet Union or another major Communist State"
+ RULE_OPTION_DEMOCRATIC_HISTORICAL_ATL_AI_DESC:0 "Atlantis will try to curtail the criminal underworld to join the allies and stave the rise of fascism "
+ RULE_DEMOCRATIC_ALTERNATE_ATL_AI_DESC:0 "Atlantis will joing the allies and coherce them into letting atlantis lead the way."
+ RULE_FASCIST_ATL_AI_DESC:0 "Atlantis will attempt to join Germany in world conquest by going down the relevent pathes"
+ RULE_OPTION_ATL_MONARCHIST:0 "Restore the Atlantean Empire"
+ RULE_MONARCHIST_ATL_AI_DESC:0 "The Atlantean people will attempt to restore the monarchy to power and defend their island alone."
+ 
+ #Mu Rules
+ RULE_OPTION_COMMUNIST_MUU_AI_DESC:0 "Commie Descriptor soon"
+ RULE_DEMOCRATIC_MUU_AI_DESC:0 "Democrat Descripter soon"
+ RULE_OPTION_MUU_MONARCHIST:0 "Neutral"
+ RULE_MONARCHIST_MUU_AI_DESC:0 "The Federal Republic of Muu will attempt to restore its king and avoid taking part in future wars."
+ RULE_FASCIST_MUU_AI_DESC:0 "Fasci Descriptor soon"
+
+ #Blue Mu Rules
+ RULE_OPTION_COMMUNIST_FMU_AI_DESC:0 "Commie Descriptor soon"
+ RULE_OPTION_DEMOCRATIC_FMU_AI_DESC:0 "Democrat Descripter soon"
+ RULE_OPTION_FMU_HISTORICAL:0 "Fascist"
+ RULE_HISTORICAL_FMU_AI_DESC:0 "The Friestaat of Muu will attempt to flip fascist and join the Axis"
+ 
+ #Prester John Rules
+ RULE_OPTION_PRJ_HISTORICAL:0 "Abandon Ethiopia"
+ RULE_OPTION_PRJ_HISTORICAL_AI_DESC:0 "Yohannia will abandon Ethiopia to the Italians"
+ RULE_OPTION_PRJ_INTERVENE:0 "Save Ethiopia"
+ RULE_OPTION_PRJ_INTERVENE_AI_DESC:0 "Yohannia will save Ethiopia from the Italians and prevent further african incursions"
+ RULE_OPTION_PRJ_PUPPET_ETHIOPIA:0 "Save Ethiopia Alternate"
+ RULE_OPTION_PRJ_PUPPET_ETHIOPIA_AI_DESC:0 "Yohannia will save Ethiopia from the Italians and have Ethiopia submit to Yohannian interests"
