--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -761,10 +761,10 @@
  MCF_neutrality_ADJ:0 "Mecafarian"
  MCF_communism_ADJ:0 "Mecafarian"
  MCF_monarchism_ADJ:0 "Mecafarian"
- SOK_fascism:0 "Södrakors"
- SOK_fascism_DEF:0 "Södrakors"
- SOK_democratic:0 "Republic of Södrakors"
- SOK_democratic_DEF:0 "Republic of Södrakors"
+ SOK_fascism:0 "Södrakors Rike"
+ SOK_fascism_DEF:0 "Södrakors Rike"
+ SOK_democratic:0 "Södrakors"
+ SOK_democratic_DEF:0 "Södrakors"
  SOK_neutrality:0 "Södrakors"
  SOK_neutrality_DEF:0 "Södrakors"
  SOK_monarchism:0 "Kingdom of Södrakors"
