Merpois is now Hepedleseran

--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -10,7 +10,7 @@
  ADU_monarchism_ADJ:0 "Andalusian"
  AFG_monarchism:0 "Kingdom of Afghanistan"
  AFG_monarchism_DEF:0 "the Kingdom of Afghanistan"
- AFG_monarchism_ADJ:0 "NAME"
+ AFG_monarchism_ADJ:0 "Afghan"
  ALB_monarchism:0 "Kingdom of Albania"
  ALB_monarchism_DEF:0 "the Kingdom of Albania"
  ALB_monarchism_ADJ:0 "Albanian"
@@ -19,7 +19,7 @@
  ALG_monarchism_ADJ:0 "Algerian"
  ALT_monarchism:0 "Kingdom of Altay"
  ALT_monarchism_DEF:0 "the Kingdom of Altay"
- ALT_monarchism_ADJ:0 "NAME"
+ ALT_monarchism_ADJ:0 "Altayan"
  ANG_monarchism:0 "Kingdom of Angola"
  ANG_monarchism_DEF:0 "the Kingdom of Angola"
  ANG_monarchism_ADJ:0 "Angolan"
@@ -40,7 +40,7 @@
  AZR_monarchism_ADJ:0 "Azerbaijani"
  BAH_monarchism:0 "Kingdom of the Bahamas"
  BAH_monarchism_DEF:0 "the Kingdom of the Bahamas"
- BAH_monarchism_ADJ:0 "NAME"
+ BAH_monarchism_ADJ:0 "Bahamian"
  BAN_monarchism:0 "Kingdom of Bangladesh"
  BAN_monarchism_DEF:0 "the Kingdom of Bangladesh"
  BAN_monarchism_ADJ:0 "Bangladeshi"
@@ -55,13 +55,13 @@
  BEL_monarchism_ADJ:0 "Belgian"
  BHU_monarchism:0 "Kingdom of Bhutan"
  BHU_monarchism_DEF:0 "the Kingdom of Bhutan"
- BHU_monarchism_ADJ:0 "NAME"
+ BHU_monarchism_ADJ:0 "Bhutani"
  BLR_monarchism:0 "Kingdom of Belarus"
  BLR_monarchism_DEF:0 "the Kingdom of Belarus"
- BLR_monarchism_ADJ:0 "NAME"
+ BLR_monarchism_ADJ:0 "Belarussian"
  BLZ_monarchism:0 "Kingdom of Belize"
  BLZ_monarchism_DEF:0 "the Kingdom of Belize"
- BLZ_monarchism_ADJ:0 "NAME"
+ BLZ_monarchism_ADJ:0 "Belizian"
  BOL_monarchism:0 "Kingdom of Bolivia"
  BOL_monarchism_DEF:0 "the Kingdom of Bolivia"
  BOL_monarchism_ADJ:0 "Bolivian"
@@ -79,13 +79,13 @@
  BRD_monarchism_ADJ:0 "Burundian"
  BRI_monarchism:0 "Kingdom of Brittany"
  BRI_monarchism_DEF:0 "the Kingdom of Brittany"
- BRI_monarchism_ADJ:0 "NAME"
+ BRI_monarchism_ADJ:0 "Breton"
  BRM_monarchism:0 "Kingdom of Burma"
  BRM_monarchism_DEF:0 "the Kingdom of Burman"
  BRM_monarchism_ADJ:0 "Burmese"
  BSK_monarchism:0 "Kingdom of Bashkortostan"
  BSK_monarchism_DEF:0 "the Kingdom of Bashkortostan"
- BSK_monarchism_ADJ:0 "NAME"
+ BSK_monarchism_ADJ:0 "Bashkortostani"
  BUK_monarchism:0 "Kingdom of Bukhara"
  BUK_monarchism_DEF:0 "the Kingdom of Bukhara"
  BUK_monarchism_ADJ:0 "Bukharan"
@@ -106,10 +106,10 @@
  CAR_monarchism_ADJ:0 "Central African"
  CAT_monarchism:0 "Kingdom of Catalonia"
  CAT_monarchism_DEF:0 "the Kingdom of Catalonia"
- CAT_monarchism_ADJ:0 "NAME"
+ CAT_monarchism_ADJ:0 "Catalonian"
  CAY_monarchism:0 "Kingdom of Cayenne"
  CAY_monarchism_DEF:0 "the Kingdom of Cayenne"
- CAY_monarchism_ADJ:0 "NAME"
+ CAY_monarchism_ADJ:0 "Cayennian"
  CHA_monarchism:0 "Kingdom of Chad"
  CHA_monarchism_DEF:0 "the Kingdom of Chad"
  CHA_monarchism_ADJ:0 "Chadian"
@@ -121,13 +121,13 @@
  CHL_monarchism_ADJ:0 "Chilean"
  CHU_monarchism:0 "Kingdom of Chuvashia"
  CHU_monarchism_DEF:0 "the Kingdom of Chuvashia"
- CHU_monarchism_ADJ:0 "NAME"
+ CHU_monarchism_ADJ:0 "Chuvashian"
  CIN_monarchism:0 "Kingdom of Chechnya"
  CIN_monarchism_DEF:0 "the Kingdom of Chechnya"
- CIN_monarchism_ADJ:0 "NAME"
+ CIN_monarchism_ADJ:0 "Chechen"
  CKK_monarchism:0 "Kingdom of Chukotka"
  CKK_monarchism_DEF:0 "the Kingdom of Chukotka"
- CKK_monarchism_ADJ:0 "NAME"
+ CKK_monarchism_ADJ:0 "Chukotkan"
  CMR_monarchism:0 "Kingdom of Cameroon"
  CMR_monarchism_DEF:0 "the Kingdom of Cameroon"
  CMR_monarchism_ADJ:0 "Cameroonian"
@@ -142,7 +142,7 @@
  COS_monarchism_ADJ:0 "Corsican"
  CRC_monarchism:0 "Kingdom of Curacao"
  CRC_monarchism_DEF:0 "the Kingdom of Curacao"
- CRC_monarchism_ADJ:0 "NAME"
+ CRC_monarchism_ADJ:0 "Curacaoan"
  CRI_monarchism:0 "Kingdom of Crimea"
  CRI_monarchism_DEF:0 "the Kingdom of Crimea"
  CRI_monarchism_ADJ:0 "Crimean"
@@ -166,7 +166,7 @@
  DAG_monarchism_ADJ:0 "Dagestani"
  DAH_monarchism:0 "Kingdom of Dahomey"
  DAH_monarchism_DEF:0 "the Kingdom of Dahomey"
- DAH_monarchism_ADJ:0 "NAME"
+ DAH_monarchism_ADJ:0 "Dahomeyan"
  DDR_monarchism:0 "Kingdom of the Ostdeutsch"
  DDR_monarchism_DEF:0 "the Kingdom of the Ostdeutsch"
  DDR_monarchism_ADJ:0 "East German"
@@ -175,16 +175,16 @@
  DEN_monarchism_ADJ:0 "Danish"
  DJI_monarchism:0 "Kingdom of Djbouti"
  DJI_monarchism_DEF:0 "the Kingdom of Djbouti"
- DJI_monarchism_ADJ:0 "NAME"
+ DJI_monarchism_ADJ:0 "Djboutian"
  DNZ_monarchism:0 "Kingdom of Gdańsk"
  DNZ_monarchism_DEF:0 "the Kingdom of Gdańsk"
- DNZ_monarchism_ADJ:0 "NAME"
+ DNZ_monarchism_ADJ:0 "Gdańsk"
  DOM_monarchism:0 "Kingdom of Dominica"
  DOM_monarchism_DEF:0 "the Kingdom of Dominica"
  DOM_monarchism_ADJ:0 "Dominican"
  DON_monarchism:0 "Kingdom of the Don Cossacks"
  DON_monarchism_DEF:0 "the Kingdom of the Don Cossacks"
- DON_monarchism_ADJ:0 "NAME"
+ DON_monarchism_ADJ:0 "Don Cossack"
  ECU_monarchism:0 "Kingdom of Ecuador"
  ECU_monarchism_DEF:0 "the Kingdom of Ecuador"
  ECU_monarchism_ADJ:0 "Ecuadorian"
@@ -193,13 +193,13 @@
  EGY_monarchism_ADJ:0 "Egyptian"
  ELS_monarchism:0 "Kingdom of El Salvador"
  ELS_monarchism_DEF:0 "the Kingdom of El Salvador"
- ELS_monarchism_ADJ:0 "NAME"
+ ELS_monarchism_ADJ:0 "Elsalvadorian"
  ENG_monarchism:0 "United Kingdom"
  ENG_monarchism_DEF:0 "the United Kingdom"
- ENG_monarchism_ADJ:0 "NAME"
- EQG_monarchism:0 "Kingdom of Equitorial Guinea"
- EQG_monarchism_DEF:0 "the Kingdom of Equitorial Guinea"
- EQG_monarchism_ADJ:0 "NAME"
+ ENG_monarchism_ADJ:0 "British"
+ EQG_monarchism:0 "Kingdom of Equatorial Guinea"
+ EQG_monarchism_DEF:0 "the Kingdom of Equatorial Guinea"
+ EQG_monarchism_ADJ:0 "Equatorial Guinean"
  ERI_monarchism:0 "Kingdom of Eritrea"
  ERI_monarchism_DEF:0 "the Kingdom of Eritrea"
  ERI_monarchism_ADJ:0 "Eritrean"
@@ -232,7 +232,7 @@
  GAM_monarchism_ADJ:0 "Gambian"
  GDL_monarchism:0 "Kingdom of Guadeloupe"
  GDL_monarchism_DEF:0 "the Kingdom of Guadeloupe"
- GDL_monarchism_ADJ:0 "NAME"
+ GDL_monarchism_ADJ:0 "Guadeloupan"
  GEO_monarchism:0 "Kingdom of Georgia"
  GEO_monarchism_DEF:0 "the Kingdom of Georgia"
  GEO_monarchism_ADJ:0 "Georgian"
@@ -250,7 +250,7 @@
  GNA_monarchism_ADJ:0 "Guinean"
  GNB_monarchism:0 "Kingdom of Guinea-Bissau"
  GNB_monarchism_DEF:0 "the Kingdom of Guinea-Bissau"
- GNB_monarchism_ADJ:0 "NAME"
+ GNB_monarchism_ADJ:0 "Guinea-Bissauan"
  GRE_monarchism:0 "Kingdom of Greece"
  GRE_monarchism_DEF:0 "the Kingdom of Greece"
  GRE_monarchism_ADJ:0 "Greek"
@@ -280,7 +280,7 @@
  HON_monarchism_ADJ:0 "Honduran"
  HRZ_monarchism:0 "Kingdom of Herzegovina"
  HRZ_monarchism_DEF:0 "the Kingdom of Herzegovina"
- HRZ_monarchism_ADJ:0 "NAME"
+ HRZ_monarchism_ADJ:0 "Herzegovinian"
  HUN_monarchism:0 "Kingdom of Hungary"
  HUN_monarchism_DEF:0 "the Kingdom of Hungary"
  HUN_monarchism_ADJ:0 "Hungarian"
@@ -337,7 +337,7 @@
  KKP_monarchism_ADJ:0 "Karakalpakstani"
  KOM_monarchism:0 "Kingdom of Komi"
  KOM_monarchism_DEF:0 "the Kingdom of Komi"
- KOM_monarchism_ADJ:0 "NAME"
+ KOM_monarchism_ADJ:0 "Komi"
  KOR_monarchism:0 "Empire of Korea"
  KOR_monarchism_DEF:0 "the Empire of Korea"
  KOR_monarchism_ADJ:0 "Korean"
@@ -433,7 +433,7 @@
  MRT_monarchism_ADJ:0 "Mauritanian"
  MZB_monarchism:0 "Kingdom of Mozambique"
  MZB_monarchism_DEF:0 "the Kingdom of Mozambique"
- MZB_monarchism_ADJ:0 "NAME"
+ MZB_monarchism_ADJ:0 "Mozambiquian"
  NAV_monarchism:0 "Kingdom of Navarre"
  NAV_monarchism_DEF:0 "the Kingdom of Navarre"
  NAV_monarchism_ADJ:0 "Navarrese"
@@ -560,9 +560,9 @@
  SIE_monarchism:0 "Kingdom of Sierra Leone"
  SIE_monarchism_DEF:0 "the Kingdom of Sierra Leone"
  SIE_monarchism_ADJ:0 "Sierra Leonean"
- SIK_monarchism:0 "Kingdom of XXXXXXXX"
- SIK_monarchism_DEF:0 "the Kingdom of XXXXXXXX"
- SIK_monarchism_ADJ:0 "XXX Chinese"
+ SIK_monarchism:0 "Kingdom of Xinjiang"
+ SIK_monarchism_DEF:0 "the Kingdom of Xinjiang"
+ SIK_monarchism_ADJ:0 "Xinjiangese"
  SIL_monarchism:0 "Kingdom of Silesia"
  SIL_monarchism_DEF:0 "the Kingdom of Silesia"
  SIL_monarchism_ADJ:0 "Silesian"
@@ -1971,21 +1971,21 @@
  UTR_neutrality_ADJ:0 "Rangioran"
  UTR_communism_ADJ:0 "Rangioran"
  UTR_monarchism_ADJ:0 "Rangioran"
- AME_fascism:0 "Meropan Empire"
- AME_fascism_DEF:0 "the Meropan Empire"
- AME_democratic:0 "Republic of Meropis"
- AME_democratic_DEF:0 "the Republic of Meropis"
- AME_neutrality:0 "Republic of Meropis"
- AME_neutrality_DEF:0 "the Republic of Meropis"
- AME_monarchism:0 "Kingdom of Meropis"
- AME_monarchism_DEF:0 "the Kingdom of Meropis"
- AME_communism:0 "Peoples Republic of Meropis"
- AME_communism_DEF:0 "the Peoples Republic of Meropis"
- AME_fascism_ADJ:0 "Meropan"
- AME_democratic_ADJ:0 "Meropan"
- AME_neutrality_ADJ:0 "Meropan"
- AME_communism_ADJ:0 "Meropan"
- AME_monarchism_ADJ:0 "Meropan"
+ AME_fascism:0 "Hepedleseran Empire"
+ AME_fascism_DEF:0 "the Hepedleseran Empire"
+ AME_democratic:0 "Republic of Hepedleseran"
+ AME_democratic_DEF:0 "the Republic of Hepedleseran"
+ AME_neutrality:0 "Republic of Hepedleseran"
+ AME_neutrality_DEF:0 "the Republic of Hepedleseran"
+ AME_monarchism:0 "Kingdom of Hepedleseran"
+ AME_monarchism_DEF:0 "the Kingdom of Hepedleseran"
+ AME_communism:0 "Peoples Republic of Hepedleseran"
+ AME_communism_DEF:0 "the Peoples Republic of Hepedleseran"
+ AME_fascism_ADJ:0 "Hepedleseran"
+ AME_democratic_ADJ:0 "Hepedleseran"
+ AME_neutrality_ADJ:0 "Hepedleseran"
+ AME_communism_ADJ:0 "Hepedleseran"
+ AME_monarchism_ADJ:0 "Hepedleseran"
  NIL_fascism:0 "Nilotian Empire"
  NIL_fascism_DEF:0 "the Nilotian Empire"
  NIL_democratic:0 "Republic of Nilotia"
