--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -1956,21 +1956,21 @@
  NSW_neutrality_ADJ:0 "New Swabian"
  NSW_communism_ADJ:0 "New Swabian"
  NSW_monarchism_ADJ:0 "New Swabian"
- UTR_fascism:0 "Rangioran Empire"
- UTR_fascism_DEF:0 "the Rangioran Empire"
- UTR_democratic:0 "Rangioran Republic"
- UTR_democratic_DEF:0 "the Rangioran Republic"
- UTR_neutrality:0 "Rangioran Republic"
- UTR_neutrality_DEF:0 "Rangioran Republic"
- UTR_monarchism:0 "Kingdom of Rangiora"
- UTR_monarchism_DEF:0 "the Kingdom of Rangiora"
- UTR_communism:0 "Peoples Republic of Rangiora "
- UTR_communism_DEF:0 "the Peoples Republic of Rangiora "
- UTR_fascism_ADJ:0 "Rangioran"
- UTR_democratic_ADJ:0 "Rangioran"
- UTR_neutrality_ADJ:0 "Rangioran"
- UTR_communism_ADJ:0 "Rangioran"
- UTR_monarchism_ADJ:0 "Rangioran"
+ UTR_fascism:0 "Rawaenganuipoan Empire"
+ UTR_fascism_DEF:0 "the Rawaenganuipoan Empire"
+ UTR_democratic:0 "Rawaenganuipo Republic"
+ UTR_democratic_DEF:0 "the Rawaenganuipo Republic"
+ UTR_neutrality:0 "Rawaenganuipoan Republic"
+ UTR_neutrality_DEF:0 "Rawaenganuipoan Republic"
+ UTR_monarchism:0 "Kingdom of Rawaenganuipo"
+ UTR_monarchism_DEF:0 "the Kingdom of Rawaenganuipo"
+ UTR_communism:0 "Peoples Republic of Rawaenganuipo "
+ UTR_communism_DEF:0 "the Peoples Republic of Rawaenganuipo "
+ UTR_fascism_ADJ:0 "Rawaenganuipoan"
+ UTR_democratic_ADJ:0 "Rawaenganuipoan"
+ UTR_neutrality_ADJ:0 "Rawaenganuipoan"
+ UTR_communism_ADJ:0 "Rawaenganuipoan"
+ UTR_monarchism_ADJ:0 "Rawaenganuipoan"
  AME_fascism:0 "Hepedleseran Empire"
  AME_fascism_DEF:0 "the Hepedleseran Empire"
  AME_democratic:0 "Republic of Hepedleseran"
