Kingdom of New Atlantis needs people names

--- a/localisation/aml_countries_cosmetic_l_english.yml
+++ b/localisation/aml_countries_cosmetic_l_english.yml
@@ -32,14 +32,14 @@
  SCP_ENG_autonomy_integrated_puppet_DEF:0 "British Scotia"
  
   
- SOK_SWE_autonomy_dominion:0 "Principality of Sodrakors"
- SOK_SWE_autonomy_colony:0 "Sodrakors Confederation"
- SOK_SWE_autonomy_puppet:0 "Province of Sodrakors"
- SOK_SWE_autonomy_integrated_puppet:0 "Swedish Sodrakors"
- SOK_SWE_autonomy_dominion_DEF:0 "the Principality of Sodrakors"
- SOK_SWE_autonomy_colony_DEF:0 "the Sodrakors Confederation"
- SOK_SWE_autonomy_puppet_DEF:0 "the Province of Sodrakors"
- SOK_SWE_autonomy_integrated_puppet_DEF:0 "Swedish Sodrakors"
+ SOK_SWE_autonomy_dominion:0 "Principality of Södrakors"
+ SOK_SWE_autonomy_colony:0 "Södrakors Confederation"
+ SOK_SWE_autonomy_puppet:0 "Province of Södrakors"
+ SOK_SWE_autonomy_integrated_puppet:0 "Swedish Södrakors"
+ SOK_SWE_autonomy_dominion_DEF:0 "the Principality of Södrakors"
+ SOK_SWE_autonomy_colony_DEF:0 "the Södrakors Confederation"
+ SOK_SWE_autonomy_puppet_DEF:0 "the Province of Södrakors"
+ SOK_SWE_autonomy_integrated_puppet_DEF:0 "Swedish Södrakors"
  
  #African Puppets
  PRJ_COG_puppet_subject:0 "Kingdom of Zaire"
