--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -61,12 +61,12 @@
  VICTORY_POINTS_14060:0 "Cesepaglia"
  VICTORY_POINTS_14058:0 "Nythrengroth"
  #New Atlantis
- VICTORY_POINTS_13960:0 "Silver Town"
- VICTORY_POINTS_13339:0 "Gold Town"
- VICTORY_POINTS_13987:0 "Royal Capital"
- VICTORY_POINTS_13340:0 "On the big island to the left"
- VICTORY_POINTS_13938:0 "copper town"
- VICTORY_POINTS_13929:0 "Copper town 2 boogaloo"
+ VICTORY_POINTS_13960:0 "Genżitz"
+ VICTORY_POINTS_13339:0 "Ertakitz"
+ VICTORY_POINTS_13987:0 "Epxanak"
+ VICTORY_POINTS_13340:0 "Guretneser"
+ VICTORY_POINTS_13938:0 "Gukiste"
+ VICTORY_POINTS_13929:0 "Genagedexat"
  
  
  
