Character Names friend :3

--- a/localisation/AME_l_english.yml
+++ b/localisation/AME_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿l_english: #Atlantean names please
  AME_conservatism_leader:0 "NAME"
  AME_marxism_leader:0 "NAME"
  AME_generic_fascism_leader:0 "NAME"
