--- a/localisation/AME_l_english.yml
+++ b/localisation/AME_l_english.yml
@@ -1,4 +1,5 @@
-﻿l_english: #Atlantean names please
+﻿l_english:
+
  AME_conservatism_leader:0 "Kansár Ħemrige"
  AME_marxism_leader:0 "Čarhat Tensiaz"
  AME_generic_fascism_leader:0 "Pergaxri Gunavrak"
@@ -55,4 +56,3 @@
  AME_navy_screen_2:0 "Alsam Erganistiak"
  AME_navy_anti_submarine_1:0 "Juntle Manzixilak"
  AME_navy_naval_air_defense_2:0 "Klamle Ganbixiek"
- 
